RESOLVED FIXED130982
Allocate IOSurfaces with the same cache mode that CoreAnimation uses
https://bugs.webkit.org/show_bug.cgi?id=130982
Summary Allocate IOSurfaces with the same cache mode that CoreAnimation uses
Tim Horton
Reported 2014-03-31 12:56:50 PDT
Created attachment 228191 [details] patch ImageBufferCG does the same thing.
Attachments
patch (1.80 KB, patch)
2014-03-31 12:56 PDT, Tim Horton
simon.fraser: review+
WebKit Commit Bot
Comment 1 2014-03-31 12:59:38 PDT
Attachment 228191 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 2 2014-03-31 13:45:51 PDT
Comment on attachment 228191 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=228191&action=review > Source/WebCore/ChangeLog:3 > + Allocate IOSurfaces with the same cache mode that CoreAnimation uses No bug number.
Tim Horton
Comment 3 2014-03-31 14:10:19 PDT
Note You need to log in before you can comment on or make changes to this bug.