Allocate IOSurfaces with the same cache mode that CoreAnimation uses https://bugs.webkit.org/show_bug.cgi?id=130982

Reviewed by Simon Fraser.

* platform/graphics/cocoa/IOSurface.mm:
(IOSurface::IOSurface):
CA uses kIOMapWriteCombineCache for IOSurfaces allocated on iOS.


Canonical link: https://commits.webkit.org/149038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166527 268f45cc-cd09-0410-ab3c-d52691b4dbfc